--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:frontend": "vite",
     "dev:backend": "node server.js",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-story": "node scripts/storyGenerator/index.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.1",
